--- a/src/index.css
+++ b/src/index.css
@@ -11,72 +11,33 @@
 }
 
 :root {
-  color: #040D12;
-  background-color: #E5D8BF;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+nav {
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #040d12;
 }
 
 .LogoHome {
   height: 100px;
+  margin-top: 10px;
+}
+
+.layout {
+  padding: 20px 80px;
+  color: #f6f4eb !important;
 }
 
 body {
-  margin: 0;
-  min-width: 100vw;
-  min-height: 100vh;
   font-family: "Petrona", system-ui, Avenir, Helvetica, Arial, sans-serif;
-  color: #040D12;
-  background-color: #E5D8BF;
-}
-
-h1 {
-  font-family: "Petrona", system-ui, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 3.2em;
-  line-height: 1.1;
+  background-color: #040d12;
 }
 
 a {
-  font-weight: 500;
-  color: #040D12;
   text-decoration: inherit;
-}
-a:hover {
-  color: #17191a;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #040D12;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #17191a;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #040D12;
-    background-color: #E5D8BF;
-  }
-  a:hover {
-    color: #17191a;
-  }
-  button {
-    background-color: #040D12;
-  }
 }
